# socks-parser

./: Cargo.toml
examples/: server.rs
src/: client.rs  common.rs  lib.rs  request.rs  response.rs  server.rs
src/common/: address_type.rs  v4.rs  v5.rs
src/common/v5/: address_type.rs
