[package]
name = "socks-parser"
version = "0.1.0"
edition = "2021"

[features]
default = ["async"]
async = ["tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "server"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = [
    "ansi",
    "env-filter",
    "fmt",
    "std",
] }

[dependencies]
nom = "7"
tokio = { version = "1", features = ["rt", "io-util", "net"], optional = true }
log = "0.4"
